--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.1",
-    "uuid": "^8.3.0"
+    "express-async-errors": "^3.1.1",
+    "uuid": "^8.3.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "nodemon": "2.0.4"
