--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "8.2.0",
     "express": "4.17.1",
-    "express-async-errors": "^3.1.1",
-    "uuid": "^8.3.0",
-    "yup": "^0.29.3"
+    "express-async-errors": "3.1.1",
+    "pg": "8.3.3",
+    "uuid": "8.3.0",
+    "yup": "0.29.3"
   },
   "devDependencies": {
     "nodemon": "2.0.4"
