--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "pg": "8.3.3",
     "uuid": "8.3.0",
     "yup": "0.29.3"
